# water_slides

./: Cargo.toml  notes.txt
.lapce/: run.toml
crates/bevy_panorbit_camera/src/: lib.rs
examples/: children.rs  egui_multipass.rs  egui_ui.rs  readme.txt  ui.rs
src/: FhgahaAyuMirage.jsonc  fps.rs  game.rs  main.rs  my_ui.rs  road_segment.rs  tube_segment.rs
src/game/: my_camera.rs  my_cursor.rs  pipe.rs  tube_segment.rs
src/game/tube_segment/: profile_shape.rs
src/road_segment/: mesh_2d.rs  oriented_point.rs  profile_shape.rs
src/tube_segment/: profile_shape.rs
