[package]
name = "water_slides"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false,  features = [
	"dynamic_linking", 
	"bevy_dev_tools",
	
	#default
	"animation",
	"bevy_asset",
	"bevy_state",
	"bevy_audio",
	"bevy_color",
	"bevy_gilrs",
	"bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_gltf",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"multi_threaded",
	"png",
	"hdr",
	"vorbis",
	"x11",
	"bevy_gizmos",
	"android_shared_stdcxx",
	"tonemapping_luts",
	"smaa_luts",
	"default_font",
	"webgl2",
	"sysinfo_plugin",
] }
bevy_mod_raycast = "0.18.0"
bevy_lunex = { version = "0.2.4" }
bevy_rts_camera = { path = "crates/bevy_rts_camera" }
bevy_panorbit_camera = {path = "crates/bevy_panorbit_camera"}
bevy_dev_tools = "0.14.2"
bevy_egui = "0.30.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Most aggressive optimizations possible:
# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
# incremental = false
# debug = false
